# pymetagen

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  USAGE.md  __init__.py  m.md  pyproject.toml  run_mypy.sh  sonar-project.properties  tox.ini
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  new-release.md
.github/scripts/: get_release_text.py
.github/workflows/: pypi-release.yml  release-action.yml  release-deploy.yml  unit-tests.yml
docs/: pymetage.html  pymetage.md
docs/pymetage_files/libs/bootstrap/: bootstrap.min.css
pymetagen/: __init__.py  _typing.py  _version.py  app.py  data_loader.py  dataloader.py  datatypes.py  docker-datapackaing  metagen.py  pymetagen.py  utils.py
pymetagen/utils/: _version.py  utils.py
src/pymetagen/: _typing.py  metagen.py
test-reports/: pytest.xml
tests/: conftest.py  test_app.py  test_metagen.py  test_pymetagen.py  test_utils.py
tests/data/: descriptions.csv  descriptions.json  filter_query.sql  input_different_types.parquet  sample.json  testdata.csv
tests/data/input_a_partition.parquet/a=1/: cdb2ca34d2a546968f674e5839497d11-0.parquet
tests/data/input_a_partition.parquet/a=4/: cdb2ca34d2a546968f674e5839497d11-0.parquet
tests/data/input_a_partition.parquet/a=7/: cdb2ca34d2a546968f674e5839497d11-0.parquet
tests/data/input_ab_partition.parquet/a=4/b=5/: d5b663bd9d244dfb845947d753fa78fe-0.parquet
tests/data/input_ab_partition.parquet/a=7/b=8/: d5b663bd9d244dfb845947d753fa78fe-0.parquet
tests/data/input_ab_partition/a=1/b=2/: d5b663bd9d244dfb845947d753fa78fe-0.parquet
tests/data/input_abc_partition.parquet/a=4/b=5/c=6/: d5366478375e4272a1c0c9203fbec1c7-0.parquet
