[project]
name = "pymetagen"
version = "0.3.1"
description = "Metadata generator using polars as backend."
authors = [{ name = "Smart Data Foundry", email = "info@smartdatafoundry.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies=[
    "pyarrow>=15.0.0",
    "pandas>=1.3.5",
    "polars>=1.0.0",
    "openpyxl>=3.1.4",
    "click>=8.1.7",
    "xlsxwriter>=3.2.0",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.2.2"
tox = "^4.15.1"
typing-extensions = "^4.12.2"
mypy = "^1.11.1"
coverage = "^7.6.0"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
pandas-stubs = "^2.2.2.240603"

[project.optional-dependencies]
xlsx = ["xlsxwriter"]

[project.scripts]
metagen = 'pymetagen.app:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
preview = true
skip-string-normalization = false
include = '\.pyi?$'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
profile = "black"
line_length = 79

[tool.ruff]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
]
target-version = "py39"
line-length = 79
ignore = [
    "E501",
] # Ignore line length errors, since we're using Black/docformatter

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.docformatter]
black = true
style = "sphinx"

[tool.pytest.ini_options]
addopts = '--strict-markers --junitxml=test-reports/pytest.xml'
junit_family = 'xunit1'

[tool.mypy]
files = "pymetagen"
python_version = "3.11"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.parquet", "pyarrow.compute"]
ignore_missing_imports = true


[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if .*.debug:",
]

[tool.coverage.run]
branch = true
